osd, mds: fix the "heap" admin cmd printing always to error stream

Before the patch `ceph::osd_cmds::heap()` was confusing
the concepts of _stderr_ and _stdout_. This  was the direct
cause of the differences in output between `ceph tell` and
`ceph daeamon`.

Thanks to Laura Flores who made the extremely useful observation
noted in https://tracker.ceph.com/issues/57119#note-3.

Fixes: https://tracker.ceph.com/issues/57119
Signed-off-by: Radoslaw Zarzynski <rzarzyns@redhat.com>
(cherry picked from commit 94436475c4c9a11a94dd21c619c9ae0014ac393d)